--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 os: osx
-osx_image: xcode7.1
-rvm: 
-  - 2.1.5
+osx_image: xcode7.3
+rvm:
+  - 2.2.5
 install:
   - sudo bundle install
   - sudo bundle exec rake install
 script: sudo bundle exec rake
+before_install:
+  - gem update --system
+  - gem --version
 env:
   - TRAVIS=true
