--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ os: osx
 osx_image: xcode7.3
 rvm:
   - 2.2.5
-install:
-  - sudo bundle install
-  - sudo bundle exec rake install
-script: sudo bundle exec rake
 before_install:
   - gem update --system
   - gem --version
+install:
+  - bundle install
+  - bundle exec rake install
+script: bundle exec rake
 env:
   - TRAVIS=true
